[gd_scene load_steps=6 format=3 uid="uid://bgf5mn0tdpky1"]

[ext_resource type="Script" path="res://Enemies/enemy_base.gd" id="1_omne7"]
[ext_resource type="Texture2D" uid="uid://chfyobu0wd1sv" path="res://Enemies/Enemy.JPG" id="1_w4td3"]
[ext_resource type="PackedScene" uid="uid://bxn84walmdo3v" path="res://Enemies/attack_effect.tscn" id="3_usmw5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_luqt6"]
radius = 12.0
height = 54.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sgu66"]
radius = 38.0132

[node name="Enemy_Base" type="CharacterBody2D"]
script = ExtResource("1_omne7")

[node name="Art" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Art"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_w4td3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_luqt6")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_sgu66")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AttackEffects" type="Node" parent="."]

[node name="AttackEffect" parent="AttackEffects" instance=ExtResource("3_usmw5")]
visible = false

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="animation_finished" from="AttackEffects/AttackEffect" to="." method="_on_attack_effect_animation_finished"]
